Added new UI and products

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VITE_AUTH0_DOMAIN=dev-7u61vr6azg2q6isz.us.auth0.com
 VITE_AUTH0_CLIENT_ID=GXfuClLOvE1dc3jM1kGekUPALLQe8cjc
 VITE_AUTH0_CALLBACK_URL=http://localhost:5173/callback
 VITE_AUTH0_AUDIENCE=https://strushk-api
+VITE_API_SERVER_URL=http://localhost:8080
